[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anml-client"
version = "0.1.0"
description = "ANML 1.0 client library for Python"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
authors = [
    { name = "ANML Foundation", email = "sponsors@anmlfoundation.org" },
]
keywords = ["anml", "agent", "agentic", "markup", "machine-first", "duckument", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
    "defusedxml>=0.7.0,<1.0",
]

[project.urls]
Homepage = "https://anmlfoundation.org"
Repository = "https://github.com/ANML-Foundation/anml-client-python"
Documentation = "https://anmlfoundation.org/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
